# FEUP-DA-2324-PROJ2

./: CMakeCache.txt  CMakeLists.txt  Graph.h  Heap.cpp  Management.cpp  Management.h  UFDS.cpp  build.ninja  cmake_install.cmake  main.cpp  menu.cpp  menu.h  points.cpp  points.h
.cmake/api/v1/reply/: cache-v2-ae6702d8a80f969fa842.json  cmakeFiles-v1-41a3454fa46a30055ff1.json  codemodel-v2-5c1f8b4829384fee921a.json  index-2024-05-17T09-16-46-0267.json  target-FEUP_DA_2324_PROJ2-Debug-347692e18975d1fc9ceb.json
